crates/metaxy-cli/tests/snapshots/react__snapshot_react_streams_only.snap
---
source: crates/metaxy-cli/tests/react.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

import { useState, useEffect, useRef, useCallback } from "react";

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type StreamKey = keyof Procedures["streams"];
type StreamInput<K extends StreamKey> = Procedures["streams"][K]["input"];
type StreamOutput<K extends StreamKey> = Procedures["streams"][K]["output"];

type VoidStreamKey = "events";
type NonVoidStreamKey = "chat";

export interface StreamOptions<K extends StreamKey> {
  callOptions?: CallOptions;
  onChunk?: (chunk: StreamOutput<K>) => void;
  onDone?: () => void;
  onError?: (error: RpcError) => void;
}

export interface StreamResult<K extends StreamKey> {
  readonly chunks: StreamOutput<K>[];
  readonly error: RpcError | undefined;
  readonly isStreaming: boolean;
  readonly isDone: boolean;
  start: () => void;
  stop: () => void;
}

const VOID_STREAM_KEYS: Set<StreamKey> = new Set(["events"]);

export function useStream<K extends "events">(client: RpcClient, key: K, options?: StreamOptions<K>): StreamResult<K>;
export function useStream<K extends "chat">(client: RpcClient, key: K, input: StreamInput<K>, options?: StreamOptions<K>): StreamResult<K>;
export function useStream<K extends StreamKey>(
  client: RpcClient,
  ...args: unknown[]
): StreamResult<K> {
  const key = args[0] as K;

  let inputArg: StreamInput<K> | undefined;
  let options: StreamOptions<K> | undefined;

  if (VOID_STREAM_KEYS.has(key)) {
    options = args[1] as StreamOptions<K> | undefined;
  } else {
    inputArg = args[1] as StreamInput<K>;
    options = args[2] as StreamOptions<K> | undefined;
  }

  const [chunks, setChunks] = useState<StreamOutput<K>[]>([]);
  const [error, setError] = useState<RpcError | undefined>();
  const [isStreaming, setIsStreaming] = useState(false);
  const [isDone, setIsDone] = useState(false);
  const controllerRef = useRef<AbortController | undefined>();
  const optionsRef = useRef(options);
  optionsRef.current = options;

  const stop = useCallback(() => {
    if (controllerRef.current) {
      controllerRef.current.abort();
      controllerRef.current = undefined;
    }
  }, []);

  const start = useCallback(() => {
    stop();
    const controller = new AbortController();
    controllerRef.current = controller;
    setChunks([]);
    setError(undefined);
    setIsStreaming(true);
    setIsDone(false);

    (async () => {
      try {
        const callArgs: unknown[] = [key];
        if (inputArg !== undefined) callArgs.push(inputArg);
        const mergedCallOptions = { ...optionsRef.current?.callOptions, signal: controller.signal };
        callArgs.push(mergedCallOptions);
        const gen = (client.stream as (...a: unknown[]) => AsyncGenerator<unknown>)(...callArgs);
        for await (const chunk of gen) {
          if (controller.signal.aborted) break;
          setChunks(prev => [...prev, chunk as StreamOutput<K>]);
          optionsRef.current?.onChunk?.(chunk as StreamOutput<K>);
        }
        if (!controller.signal.aborted) {
          setIsDone(true);
          optionsRef.current?.onDone?.();
        }
      } catch (e) {
        if (!controller.signal.aborted) {
          setError(e as RpcError);
          optionsRef.current?.onError?.(e as RpcError);
        }
      } finally {
        setIsStreaming(false);
      }
    })();
  }, [client, key, inputArg, stop]);

  useEffect(() => {
    return () => stop();
  }, [stop]);

  return { chunks, error, isStreaming, isDone, start, stop };
}
